--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   },
   "devDependencies": {
     "snowpack": "^3.0.1"
+  },
+  "dependencies": {
+    "@snowpack/plugin-sass": "^1.4.0",
+    "@snowpack/plugin-svelte": "^3.6.1",
+    "node-sass": "^5.0.0",
+    "peerjs": "^1.3.2",
+    "svelte": "^3.37.0",
+    "svelte-preprocess": "^4.7.0"
   }
 }
