--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
+  "name": "picross-multi",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "echo \"This template does not include a test runner by default.\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "snowpack": "^3.0.1"
+    "@sveltejs/vite-plugin-svelte": "^2.0.2",
+    "@tsconfig/svelte": "^3.0.0",
+    "sass": "^1.58.0",
+    "svelte": "^3.55.1",
+    "svelte-check": "^2.10.3",
+    "svelte-preprocess": "^5.0.1",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   },
   "dependencies": {
-    "@snowpack/plugin-sass": "^1.4.0",
-    "@snowpack/plugin-svelte": "^3.6.1",
-    "node-sass": "^5.0.0",
-    "peerjs": "^1.3.2",
-    "svelte": "^3.37.0",
-    "svelte-preprocess": "^4.7.0"
+    "peerjs": "^1.3.2"
   }
 }
