--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "peerjs": "^1.3.2"
+    "peerjs": "^1.3.2",
+    "vite-tsconfig-paths": "^4.0.5"
   }
 }
