--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@data/*": ["src/data/*"],
+      "@services/*": ["src/services/*"],
       "@customTypes/*": ["src/types/*"]
     }
   },
