--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "@components/*": ["src/components/*"],
       "@data/*": ["src/data/*"],
       "@services/*": ["src/services/*"],
+      "@utils/*": ["src/utils/*"],
       "@customTypes/*": ["src/types/*"]
     }
   },
